test: adds DELETE and GET endpoints
